--- a/web.yml
+++ b/web.yml
@@ -7,6 +7,7 @@
         repo: 'https://github.com/karandavuluri/web-server'
         dest: /home/ubuntu
         version: integration
+    - name: copy integration  
       copy:
         src: home/ubuntu/web-server/index.html
         dest: /var/www/html/
@@ -19,6 +20,7 @@
         repo: 'https://github.com/karandavuluri/web-server'
         dest: /home/ubuntu/
         version: preprod
+    - name: copy preprod    
       copy:
         src: /home/ubuntu/web-server/index.html
         dest: /var/www/html/
@@ -31,6 +33,7 @@
         repo: 'https://github.com/karandavuluri/web-server'
         dest: /home/ubuntu/
         version: master
+    -name: copy prod
       copy:
         src: /home/ubuntu/web-server/index.html
         dest: /var/www/html/
