--- a/web.yml
+++ b/web.yml
@@ -5,7 +5,7 @@
     - name: integration Deploy
       git:
         repo: 'https://github.com/karandavuluri/web-server'
-        dest: /home/ubuntu
+        dest: /home/ubuntu/
         version: integration
     - name: copy integration  
       copy:
