--- a/web.yml
+++ b/web.yml
@@ -2,15 +2,19 @@
 - hosts: integration 
   become: True
   tasks:
+    - name: ensure a directory exists
+      file:
+        path: $HOME/project
+        state: directory
     - name: integration Deploy
       git:
         repo: 'https://github.com/karandavuluri/web-server'
-        dest: /var/www/html/
+        dest: $HOME/project
         version: integration
-    # - name: copy integration  
-    #   copy:
-    #     src: home/ubuntu/web-server/index.html
-    #     dest: /var/www/html/
+    - name: copy integration  
+      copy:
+        src: $HOME/project/web-server/index.html
+        dest: /var/www/html/
 
 - hosts: preprod 
   become: True
