--- a/web.yml
+++ b/web.yml
@@ -23,6 +23,7 @@
         version: integration
     - name: copy integration  
       copy:
+        become_user: root
         src: $HOME/project/web-server/index.html
         dest: /var/www/html/
 
